# tunes4r

./: .gitignore  ARCHITECTURE.md  IMPLEMENTATION_PLAN.md  IOS_BUILD_GUIDELINE.md  README.md  TODO.md  android_auto_logs.txt  create-dmg  download_songs.py  pubspec.yaml  release.sh  test_playlist.m3u  test_playlist_content.txt  xcode.sh
android/app/: build.gradle.kts  proguard-rules.pro
api/: DOWNLOAD_SERVICE_README.md  README.md  download_service.py  requirements.txt
assets/themes/: batman.toml  catppuccin_mocha.toml  dracula.toml  gruvbox_dark.toml  gruvbox_light.toml  material_dark.toml  minimal_light.toml  monokai.toml  neon.toml  nord.toml  one_dark_pro.toml  pastel_light.toml  solarized_dark.toml  solarized_light.toml  superman.toml  tokyo_night.toml
ios/Flutter/: Debug.xcconfig  Release.xcconfig
ios/Pods-Runner/: Pods-Runner-acknowledgements.markdown  Pods-Runner-acknowledgements.plist  Pods-Runner-frameworks-Debug-output-files.xcfilelist  Pods-Runner-frameworks-Release-input-files.xcfilelist  Pods-Runner-frameworks.sh  Pods-Runner.release.xcconfig
ios/Runner/: AppDelegate.swift  Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/audio_player/: audio_platform_service.dart  audio_player.dart  logger.dart  playback_actions.dart  playback_commands.dart  playback_state.dart
lib/download/: download.dart  download_model.dart  download_service.dart  (+1 more)
linux/: CMakeLists.txt
macos/: Podfile
rust/: Cargo.toml
rust/src/: lib.rs
test/: widget_test.dart
tunes4r-release-1.0.0/: RELEASE_NOTES.md
windows/: CMakeLists.txt
(+78 files in other folders)
